--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": " prisma generate && next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "postinstall": "prisma generate"
+
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
